Added artist lookup feature using Web API to show genre attributes, updated gitignore file

--- a/index.html
+++ b/index.html
@@ -28,5 +28,14 @@
         <h2>Top Genres</h2>
       </div>
     </section>
+
+    <section id="artist">
+      <h2>Identified Artist: <span id="artistName"></span></h2>
+      <span id="artistAvatar"></span>
+      <ul>
+        <li>Artist ID: <span id="artistId"></span></li>
+        <li>Genres: <span id="artistGenres"></span></li>
+      </ul>
+    </section>
   </body>
 </html>
