successful frontend-backend integration; updated code so that page displays {artistID: genres}

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
       <div id="topArtists">
         <h2>Top Artists</h2>
       </div>
+      <div id="topGenres">
+        <h2>Top Artists' Genres (from ENAO data)</h2>
+      </div>
       <div id="topTracks">
         <h2>Top Tracks</h2>
-      </div>
-      <div id="topGenres">
-        <h2>Top Genres (from Spotify Web API)</h2>
       </div>
     </section>
 
