--- a/index.html
+++ b/index.html
@@ -3,16 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <title>HUM.FM</title>
-    <script src="src/script.ts" type="module"></script>
+    <script src="src/main.ts" type="module"></script>
     <link
       href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
       rel="stylesheet"
     />
   </head>
   <body class="bg-black text-white min-h-screen">
-    <!-- Navigation and Search Bar -->
     <header class="p-4 flex items-center justify-between">
-      <!-- Logo -->
       <div class="flex items-center">
         <h1 class="font-chakra font-bold text-4xl petch tracking-tighter">
           hum
@@ -23,7 +21,6 @@
         >
       </div>
 
-      <!-- Search Bar -->
       <div class="w-1/3">
         <input
           type="text"
@@ -32,20 +29,15 @@
         />
       </div>
 
-      <!-- Profile Avatar -->
       <div class="flex items-center">
-        <div id="avatar" class="w-10 h-10 rounded-full overflow-hidden">
-          <!-- Profile image will be inserted here by the script -->
-        </div>
+        <div id="avatar" class="w-10 h-10 rounded-full overflow-hidden"></div>
       </div>
     </header>
 
-    <!-- Main Navigation -->
     <nav class="px-4 mt-2 flex items-center">
       <a href="#" class="text-gray-400 mr-6">explore</a>
       <a href="#" class="font-bold mr-6">personal</a>
 
-      <!-- Dropdown -->
       <div class="relative inline-block mr-4">
         <button class="bg-gray-800 rounded flex items-center px-3 py-1">
           <span class="text-sm mr-2">all time</span>
@@ -66,18 +58,14 @@
         </button>
       </div>
 
-      <!-- Checkbox -->
       <div class="flex items-center">
         <input type="checkbox" id="showTimeline" class="mr-2" />
         <label for="showTimeline" class="text-sm">Show timeline</label>
       </div>
     </nav>
 
-    <!-- Main Content -->
     <main class="p-4 flex flex-col h-screen">
-      <!-- Vertical Labels for the Axis -->
       <div class="flex flex-1 relative">
-        <!-- Left Vertical Text -->
         <div class="absolute left-0 top-0 h-full flex items-center">
           <div
             class="transform -rotate-90 whitespace-nowrap text-gray-500 text-sm"
@@ -86,12 +74,8 @@
           </div>
         </div>
 
-        <!-- content -->
-        <div id="content" class="flex-1">
-          <!-- space for visualization -->
-        </div>
+        <div id="content" class="flex-1"></div>
 
-        <!-- Right Vertical Text -->
         <div class="absolute right-0 bottom-0 h-full flex items-center">
           <div
             class="transform -rotate-90 whitespace-nowrap text-gray-500 text-sm"
@@ -101,7 +85,6 @@
         </div>
       </div>
 
-      <!-- Bottom Navigation -->
       <div class="flex justify-between items-center mt-4 py-2">
         <div class="flex items-center">
           <svg
@@ -143,7 +126,6 @@
       </div>
     </main>
 
-    <!-- Hidden elements to store user profile data -->
     <div class="hidden">
       <div id="profile">
         <span id="displayName"></span>
@@ -155,48 +137,50 @@
   </body>
 </html>
 
-<!-- CODE FOR OLD HTML PAGE BELOW-->
+<!-- CODE FOR OLD HTML PAGE BELOW -->
 <!-- <!DOCTYPE html>
- <html lang="en">
-   <head>
-     <meta charset="utf-8" />
-     <title>My Spotify Profile</title>
-     <script src="src/main.ts" type="module"></script>
-   </head>
-   <body>
-     <h1>Display your music taste</h1>
- 
-     <section id="profile">
-       <h2>Logged in as <span id="displayName"></span></h2>
-       <span id="avatar"></span>
-       <ul>
-         <li>User ID: <span id="id"></span></li>
-         <li>Email: <span id="email"></span></li>
-         <li>Spotfy URI: <a id="uri" href="#"></a></li>
-         <li>Link: <a id="url" href="#"></a></li>
-         <li>Profile Image: <span id="imgUrl"></span></li>
-       </ul>
-       <div id="topArtists">
-         <h2>Top Artists</h2>
-       </div>
-       <div id="topGenres">
-         <h2>Top Artists' Genres (from ENAO data)</h2>
-       </div>
-       <div id="topTracks">
-         <h2>Top Tracks</h2>
-       </div>
-       <div id="topGenres">
-         <h2>Top Genres (from Spotify Web API)</h2>
-       </div>
-     </section>
- 
-     <section id="artist">
-       <h2>Identified Artist: <span id="artistName"></span></h2>
-       <span id="artistAvatar"></span>
-       <ul>
-         <li>Artist ID: <span id="artistId"></span></li>
-         <li>Genres: <span id="artistGenres"></span></li>
-       </ul>
-     </section>
-   </body>
- </html> -->
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <title>My Spotify Profile</title>
+    <script src="src/main.ts" type="module"></script>
+  </head>
+  <body>
+    <h1>Display your music taste</h1>
+
+    <svg id="genre-map" width="800" height="600"></svg>
+
+    <section id="profile">
+      <h2>Logged in as <span id="displayName"></span></h2>
+      <span id="avatar"></span>
+      <ul>
+        <li>User ID: <span id="id"></span></li>
+        <li>Email: <span id="email"></span></li>
+        <li>Spotfy URI: <a id="uri" href="#"></a></li>
+        <li>Link: <a id="url" href="#"></a></li>
+        <li>Profile Image: <span id="imgUrl"></span></li>
+      </ul>
+      <div id="topArtists">
+        <h2>Top Artists</h2>
+      </div>
+      <div id="topGenres">
+        <h2>Top Artists' Genres (from ENAO data)</h2>
+      </div>
+      <div id="topTracks">
+        <h2>Top Tracks</h2>
+      </div>
+      <div id="topGenres">
+        <h2>Top Genres (from Spotify Web API)</h2>
+      </div>
+    </section>
+
+    <section id="artist">
+      <h2>Identified Artist: <span id="artistName"></span></h2>
+      <span id="artistAvatar"></span>
+      <ul>
+        <li>Artist ID: <span id="artistId"></span></li>
+        <li>Genres: <span id="artistGenres"></span></li>
+      </ul>
+    </section>
+  </body>
+</html> -->
